# layer-tree

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  layer-tree.md  layer_tree.db-shm  layer_tree.db-wal  operator.toml
crates/core/: Cargo.toml
crates/core/src/: blockchain.rs  keys.rs  lib.rs  signing.rs  state.rs  transactions.rs  tree.rs
crates/operator/: Cargo.toml
crates/operator/examples/: gen_address.rs
crates/operator/src/: api.rs  auth.rs  block_driver.rs  block_producer.rs  chain.rs  config.rs  db.rs  keys.rs  lib.rs  main.rs  peer_service.rs  signing_coordinator.rs  state_driver.rs
crates/operator/static/: app.js  faucet.html  index.html  style.css
crates/operator/tests/: blockchain_test.rs  e2e_full_flow_test.rs  e2e_signing_test.rs  e2e_test.rs  integration_test.rs  multi_operator_test.rs
crates/proto/: Cargo.toml
crates/proto/proto/: layer_tree.proto
crates/proto/src/: lib.rs  messages.rs  service.rs
scripts/: gen_keys.sh
